--- a/historia.html
+++ b/historia.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Historia nastrojów</h1>
     <div id="history"></div>
-    <a class="link" href="zadanie1.html">⬅️ Wróć</a>
+    <a class="link" href="index.html">⬅️ Wróć</a>
   </div>
 
   <script src="script.js"></script>
