--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,12 @@
       <button onclick="saveMood('😞')">😞</button>
     </div>
     <p id="status"></p>
-  
+  <form id="mood-form">
+  <label for="comment">Komentarz:</label>
+  <textarea id="comment" rows="3" placeholder="Dlaczego tak się czujesz?"></textarea>
+
+  <button type="submit">Wyślij</button>
+</form>
     <h2>📊 Statystyka nastrojów</h2>
     <div id="stats"></div>
   
