--- a/index.html
+++ b/index.html
@@ -9,27 +9,43 @@
 <body>
   <div class="container">
     <img src="https://cdn-icons-png.flaticon.com/512/4140/4140037.png" alt="emocje" class="header-image" />
+    
     <h1>Jak się dziś czujesz?</h1>
     <p id="today"></p>
-    <div class="mood-options">
-      <button onclick="saveMood('😊')">😊</button>
-      <button onclick="saveMood('😐')">😐</button>
-      <button onclick="saveMood('😞')">😞</button>
-    </div>
-    <p id="status"></p>
-  <form id="mood-form">
-  <label for="comment">Komentarz:</label>
-  <textarea id="comment" rows="3" placeholder="Dlaczego tak się czujesz?"></textarea>
 
-  <button type="submit">Wyślij</button>
-</form>
+    <!-- Przycisk nastroju -->
+    <div class="mood-options">
+      <button onclick="saveMood('😊')" aria-label="Szczęśliwy">😊</button>
+      <button onclick="saveMood('😐')" aria-label="Neutralny">😐</button>
+      <button onclick="saveMood('😞')" aria-label="Smutny">😞</button>
+    </div>
+
+    <p id="status"></p>
+
+    <!-- Formularz z komentarzem -->
+    <section>
+      <form id="mood-form">
+        <label for="comment">Komentarz:</label>
+        <textarea 
+          id="comment" 
+          name="comment" 
+          rows="3" 
+          placeholder="Opisz swój nastrój..." 
+          required
+        ></textarea>
+
+        <button type="submit">Wyślij</button>
+      </form>
+    </section>
+
+    <!-- Statystyki -->
     <h2>📊 Statystyka nastrojów</h2>
     <div id="stats"></div>
-  
+
+    <!-- Linki do podstron -->
     <a class="link" href="historia.html">📖 Historia</a>
     <a class="link" href="kalendarz.html">📅 Kalendarz nastroju</a>
   </div>
-  
 
   <script src="script.js"></script>
 </body>
