--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <p id="today"></p>
 
     <!-- Przycisk nastroju -->
-    <div class="mood-options">
-      <button onclick="saveMood('😊')" aria-label="Szczęśliwy">😊</button>
-      <button onclick="saveMood('😐')" aria-label="Neutralny">😐</button>
-      <button onclick="saveMood('😞')" aria-label="Smutny">😞</button>
-    </div>
+   <div class="mood-options">
+  <button type="button" class="mood-btn">😊</button>
+  <button type="button" class="mood-btn">😐</button>
+  <button type="button" class="mood-btn">😞</button>
+</div>
 
     <p id="status"></p>
 
