--- a/historia.html
+++ b/historia.html
@@ -14,5 +14,10 @@
   </div>
 
   <script src="script.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    showHistory();
+  });
+</script>
 </body>
 </html>
